--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "MERN shopping cart app",
   "main": "server.js",
   "scripts": {
-    "start": "node backend/server", 
-    "server": "nodemon backend/server", 
-    "client": "npm start --prefix frontend", 
-    "dev": "concurrently \"npm run server\" \"npm run client\"", 
-    "data:import": "node backend/seeder", 
+    "start": "node backend/server",
+    "server": "nodemon backend/server",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "data:import": "node backend/seeder",
     "data:destroy": "node backend/seeder -d"
   },
   "author": "Eyoab Tesfaye Aregay",
@@ -22,7 +22,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.17",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "query-string": "^7.0.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
