--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proshop",
+  "name": "eshop",
   "version": "1.0.0",
   "description": "MERN shopping cart app",
   "main": "server.js",
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.25.1",
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
